# SoulNexus

./: .dockerignore  .env-voice.example  .gitignore  .golangci.yml  Dockerfile  LICENSE  Makefile  README.md  README_CN.md  README_FR.md  README_JA.md  README_TW.md  README_zh.md  assets.go  desktop-pet-showcase.js  docker-compose.yml  embed.go  env-auth.example  env-voice.example  env.example  go.mod  go.sum  index.html  objects.go  system-banner.txt  user-banner.txt  voice-banner.txt
.claude/: settings.local.json
admin/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
deploy/: apt-packages  docker-entrypoint.sh  nginx.conf
desktop-pet/: .gitignore  .npmrc  coding-hook-worker.js  coding-hook.js  (+6 more)
lingllm/media/encoder/lecodec/: Cargo.toml  README.md  build.sh
lingllm/media/encoder/lecodec/benches/: codec_bench.rs
lingllm/media/encoder/lecodec/fuzz/: Cargo.toml
lingllm/media/encoder/lecodec/fuzz/fuzz_targets/: fuzz_target_1.rs
lingllm/media/encoder/lecodec/include/: lecodec.h
lingllm/media/encoder/lecodec/src/: capi.rs  lib.rs  resample.rs
lingllm/media/encoder/lecodec/src/codec/: g722.rs  g729.rs  mod.rs  opus.rs  pcma.rs  pcmu.rs  telephone_event.rs
lingllm/media/native/ledenoise/: Cargo.toml  README.md  build.sh
lingllm/media/native/ledenoise/include/: ledenoise.h
lingllm/media/native/ledenoise/src/: capi.rs  denoiser.rs  lib.rs  snr.rs
lingllm/vad/native/levad/: Cargo.toml  README.md  build.sh
lingllm/vad/native/levad/include/: levad.h
lingllm/vad/native/levad/src/: capi.rs  lib.rs  tiny_silero.rs  tiny_ten.rs
(+3215 files in other folders)
